[project]
name = "expert-fitness-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.13.0",
    "flask>=3.1.3",
    "flask-marshmallow>=1.4.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "marshmallow>=4.3.0",
    "marshmallow-sqlalchemy>=1.5.0",
    "sqlalchemy>=2.0.49",
]
